--- a/wilde.css
+++ b/wilde.css
@@ -9,8 +9,8 @@ p{
     color: black;
 }
 .stage:hover{
-    background-color: lightcoral;
-    color:purple;
+    background-color:cyan;
+    color:indigo;
 }
 
 .LordIllingworth{
@@ -35,6 +35,23 @@ p{
     td{
         background-color:wheat;
     }
-
-    
+    .name:hover{
+        background-color:palegoldenrod;
+        color:mediumblue;
+    }
+    .illingworth:hover{
+        text-shadow: 2px 2px 5px brown;
+    }
+    .ladyhunstanton:hover{
+        text-shadow: 2px 3px 4px blueviolet, 1px 3px  black;
+    }
+    .arbuthnot:hover{
+        text-shadow: 3px 4px 6px maroon, 3px 3px 6px violet, 1px 1px yellow;
+    }
+    .archdeacon:hover{
+        text-shadow: 3px 1px darkgreen, 4px 6px palevioletred;
+    }
+    .hunstanton:hover{
+        text-shadow: 5px 7px orangered;
+    }
 
